--- a/scss/particials/_media.scss
+++ b/scss/particials/_media.scss
@@ -14,5 +14,10 @@
         margin-right: 0px;
         margin-bottom: 10px;
     }
+.skills__item:not(:last-child) {
+    margin-right: 0px;
+    margin-bottom: 5px;
 
+
+}
     }
