--- a/scss/particials/_skills.scss
+++ b/scss/particials/_skills.scss
@@ -33,3 +33,7 @@ display: flex;
     display: flex;
     flex-direction: column;
 }
+
+.skills__item h3{
+    font-size: 12px;
+}
